setup unity project

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/PortalProject/[Ll]ibrary/
+/PortalProject/[Tt]emp/
+/PortalProject/[Oo]bj/
+/PortalProject/[Bb]uild/
+/PortalProject/[Bb]uilds/
+/PortalProject/[Ll]ogs/
+/PortalProject/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
